--- a/src/jupyter/1_car_data_ETL.ipynb
+++ b/src/jupyter/1_car_data_ETL.ipynb
@@ -3,7 +3,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "923fcf31-fdb9-43a1-8e30-7b0037220e61",
+   "id": "3c2921fb-9991-4619-92d8-9fed700765c0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# This notebook uses Spark manipulate the car_data.csv data file. \n",
+    "# It combines interesting sections from these 3 notebooks : \n",
+    "#\n",
+    "# https://www.kaggle.com/mohaiminul101/car-price-prediction\n",
+    "# https://www.kaggle.com/aishu2218/do-you-wanna-predict-price-of-car-you-wanna-buy\n",
+    "# https://www.kaggle.com/udit1907/linear-advanced-regression-guided-car-purchase\n",
+    "\n",
+    "# These notebooks use 'Pandas' and 'scikit-learn'. I primarily use SparkSQL and Spark MLlib."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6628f022-841f-45ff-b183-ba865cafd2ac",
    "metadata": {
     "tags": []
    },
@@ -23,6 +42,9 @@
    "cell_type": "markdown",
    "id": "7b2924a6-78de-4c76-bf90-488331b27782",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "source": [
@@ -34,24 +56,6 @@
     "      <li>Other imports are for date manipulations and plotting.</li>\n",
     "    </ul>\n",
     "</span>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b397a9e-006d-4714-801c-e9d2bedc52f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This notebook uses Spark to load an perform data transformations and combines interesting sections from these notebooks : \n",
-    "#\n",
-    "# https://www.kaggle.com/mohaiminul101/car-price-prediction\n",
-    "# https://www.kaggle.com/aishu2218/do-you-wanna-predict-price-of-car-you-wanna-buy\n",
-    "# https://www.kaggle.com/udit1907/linear-advanced-regression-guided-car-purchase\n",
-    "#  \n",
-    "# These notebooks use 'Pandas' and 'scikit-learn'. This notebook here uses Spark to do the ETL and \n",
-    "# then converts the Spark dataframe to a 'Pandas' dataframe (at the last minute) to do the visualization.\n",
-    "# Note that we are using regular 'Pandas' and not the newly available 'pyspark.pandas' in this notebook.\n"
    ]
   },
   {
