--- a/src/jupyter/1_car_data_ETL.ipynb
+++ b/src/jupyter/1_car_data_ETL.ipynb
@@ -9,7 +9,7 @@
    },
    "outputs": [],
    "source": [
-    "# This notebook uses Spark manipulate the car_data.csv data file. \n",
+    "# This notebook uses Spark import and manipulate the car_data.csv data file. \n",
     "# It combines interesting sections from these 3 notebooks : \n",
     "#\n",
     "# https://www.kaggle.com/mohaiminul101/car-price-prediction\n",
