--- a/src/jupyter/2_car_data_predictions_MLlib.ipynb
+++ b/src/jupyter/2_car_data_predictions_MLlib.ipynb
@@ -506,12 +506,13 @@
    "outputs": [],
    "source": [
     "to_predict_schema = T.StructType([\n",
-    "    T.StructField('Selling_Price', T.DoubleType(), False),\n",
+    "    T.StructField('Type_of_Car', T.StringType(), False),\n",
     "    T.StructField('values_array', T.ArrayType(T.FloatType()), False)\n",
     "])\n",
     "\n",
     "to_predict_data = [\n",
-    "    (0.27, [0.47,21000.0,0.0,9.0,1.0,0.0,0.0,1.0]),\n",
+    "    ('Nice_Car', [0.47,21000.0,0.0,9.0,1.0,0.0,0.0,1.0]),\n",
+    "    ('Better_Car', [0.74,5000.0,0.0,7.0,1.0,0.0,0.0,1.0]),\n",
     "]\n",
     "\n",
     "to_predict_df = spark.createDataFrame(data=to_predict_data, schema=to_predict_schema)\n",
@@ -523,18 +524,19 @@
     "\n",
     "\n",
     "to_predict_df = to_predict_df.select(\n",
-    "    to_predict_df[\"Selling_Price\"], \n",
+    "    F.col('Type_of_Car'), \n",
     "    list_to_vector_udf(to_predict_df[\"values_array\"]).alias(\"algorithmic_input\")\n",
     ")\n",
+    "print()\n",
+    "print()\n",
     "\n",
-    "print('The input dataframe')\n",
-    "to_predict_df.show(10, False)\n",
-    "\n",
+    "print('The input dataframe :')\n",
+    "to_predict_df.show(2, False)\n",
     "predictions = persisted_model.transform(to_predict_df)\n",
     "\n",
     "print()\n",
-    "print('The predictions dataframe')\n",
-    "predictions.select(\"algorithmic_input\", \"prediction\", \"Selling_Price\").show(5, False)"
+    "print('The predictions dataframe :')\n",
+    "predictions.select('Type_of_Car', \"algorithmic_input\", \"prediction\").show(2, False)"
    ]
   },
   {
