--- a/src/jupyter/1_car_data_ETL.ipynb
+++ b/src/jupyter/1_car_data_ETL.ipynb
@@ -9,6 +9,7 @@
    },
    "outputs": [],
    "source": [
+    "# (1)\n",
     "# This notebook uses Spark import and manipulate the car_data.csv data file. \n",
     "# It combines interesting sections from these 3 notebooks : \n",
     "#\n",
@@ -28,34 +29,18 @@
    },
    "outputs": [],
    "source": [
+    "# (2)\n",
+    "# Spark-related imports\n",
     "from pyspark.sql import SparkSession\n",
     "import pyspark.sql.functions as F\n",
     "import pyspark.sql.types as T\n",
+    "\n",
+    "# Imports for date manipulations and plotting\n",
     "from datetime import date\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7b2924a6-78de-4c76-bf90-488331b27782",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": []
-   },
-   "source": [
-    "<span style=\"color:blue\">\n",
-    "    TODO : \n",
-    "    <ul>\n",
-    "      <li>Highlight pyspark.sql SparkSession import.<\\li>\n",
-    "      <li>Spark canned set of functions and types.</li>\n",
-    "      <li>Other imports are for date manipulations and plotting.</li>\n",
-    "    </ul>\n",
-    "</span>"
    ]
   },
   {
@@ -69,35 +54,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eeac0e3-2cc2-4714-b986-8536a153c988",
-   "metadata": {
-    "tags": []
-   },
+   "id": "aaab92e4-714a-4533-ba94-3a77690177af",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# The simulated cluster environment is configured with : \n",
-    "#   - 3 workers\n",
-    "#   - With 3GB of memory for each worker (Total memory is 9GB)\n",
-    "#   - Each worker has 2 cores (total cores is 6)\n",
+    "# (3)\n",
     "\n",
-    "# Start up Spark session. Let's be greedy and ask for all available resources (We'll be explicit).\n",
+    "# Start up Spark session. \n",
     "\n",
     "# Request : \n",
     "#   - A maximum of 6 cores with \n",
     "#   - 2 cores per executor\n",
     "#   - 3 GB of memory per executor\n",
     "\n",
-    "# We also want to tell Spark about a specific java .jar file which contains a user defined function \n",
-    "# we want to use later."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aaab92e4-714a-4533-ba94-3a77690177af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "spark = SparkSession\\\n",
     "            .builder\\\n",
     "            .master(\"spark://spark-master:7077\")\\\n",
@@ -114,60 +83,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b4d7594-26b2-4304-addf-7d3ab554c6a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Print the Spark session configuration. \n",
-    "\n",
-    "print(\"Spark Session configuration : \")\n",
-    "\n",
-    "print('===')\n",
-    "\n",
-    "for e in spark.sparkContext.getConf().getAll():\n",
-    "    print(e)\n",
-    "\n",
-    "print('===')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ec82dc76-95d8-4ddc-9f95-7a96d3b20fcf",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "<span style=\"color:blue\">\n",
-    "    TODO : \n",
-    "    <ul>\n",
-    "      <li>Browse *http://spark-master:8080*. <\\li>\n",
-    "      <li>Look at running applications names.</li>\n",
-    "      <li>Look at worker core and memory usage.</li>\n",
-    "      <li>Highlight external '.jar' usage in Session configuration.</li>\n",
-    "      <li>Show StringLengthUDF class code in GitHub Project Repos.</li>\n",
-    "    </ul>\n",
-    "</span>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "f9162f04-322b-491e-a441-91788c032ceb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# (4)\n",
     "# Add jar to java spark context. It has a UDF that I want to use later.\n",
     "\n",
-    "spark._jsc.addJar(\"/src/java/spark-jobs/helloworld/target/jv_helloworld-1.0-SNAPSHOT.jar\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60ca9c2a-0a35-4902-a9fb-583b49f02706",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "spark._jsc.addJar(\"/src/java/spark-jobs/helloworld/target/jv_helloworld-1.0-SNAPSHOT.jar\")\n",
+    "\n",
     "# Register the java function. It will be available as StringLengthUDF (in the spark.sql command).\n",
     "\n",
     "spark.udf.registerJavaFunction(\"StringLengthUDF\", \"ca.nrc.udf.StringLengthUDF\", T.IntegerType())\n"
@@ -180,6 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# (5)\n",
     "# Tell Spark to use Apache Arrow\n",
     "\n",
     "spark.conf.set(\"spark.sql.execution.arrow.pyspark.enabled\", \"true\")"
@@ -216,24 +141,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ef24b61-d79b-4a99-9a54-ddce43bf447b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Read in the data. We don't ask Spark to determine the column data types. \n",
-    "# This can add time to the job. We can give it a schema in the read command \n",
-    "# or we can cast these once loaded. \n",
-    "\n",
-    "# Here, we'll cast the columns to the appropriate types once loaded.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "453d9661-e9e8-4b01-9453-b33029f837c2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# (6)\n",
+    "# Read in the data. We don't ask Spark to determine the column data types. \n",
+    "# This can add time to the job. We can give it a schema in the read command \n",
+    "# or we can cast these once loaded. \n",
+    "\n",
+    "# Here, we'll cast the columns to the appropriate types once loaded.\n",
     "# Reference : https://spark.apache.org/docs/latest/sql-data-sources-csv.html\n",
     "\n",
     "car_df = spark\\\n",
@@ -251,6 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# (7)\n",
     "# Get number of rows and columns in the dataframe. \n",
     "# Similar to Pandas \"pandas.DataFrame.shape\" ...\n",
     "\n",
@@ -264,6 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# (8)\n",
     "# Print the dataframe schema.\n",
     "# Similar to Pandas \"pandas.DataFrame.dtypes\" ...\n",
     "\n",
@@ -277,6 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# (9)\n",
     "# Show a few sample records. \n",
     "\n",
     "# Note that Prices are in lakh units. \n",
@@ -347,6 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# (10)\n",
     "# What is the current partitioning scheme ? \n",
     "\n",
     "print('Number of partitions for car_df dataframe. Before repartition : {}'.format(car_df.rdd.getNumPartitions()))\n",
@@ -371,7 +292,8 @@
    },
    "outputs": [],
    "source": [
-    "# Repartition data for fun. Shuffle data to where we have as many partitions as the number of available core\n",
+    "# (11)\n",
+    "# Repartition data a bit. Shuffle data to where we have as many partitions as the number of available core\n",
     "# (e.g. 6 in this case because our cluster is configured with 6 cores).\n",
     "\n",
     "car_df = car_df.repartition(6) \n",
@@ -404,6 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# (12)\n",
     "# We can do any number of transformations using the DataFrames API.\n",
     "# This is to give you an idea of what interacting with dataframes looks like.\n",
     "\n",
@@ -425,6 +348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# (13)\n",
     "# We can do the same with a temporary table and a SQL query:\n",
     "\n",
     "# Register the car_df DataFrame as a SQL temporary view\n",
@@ -457,6 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# (14)\n",
     "# Filtering example :\n",
     "\n",
     "# Cars selling for over 30 lakh rupees. \n",
@@ -476,9 +401,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# A point for the section above is this : \n",
-    "\n",
-    "\n",
     "# PySpark APIs for working with data are quite easy to use and maybe even easier to work with than other APIs.. (Looking at you Pandas).\n",
     "\n",
     "\n",
@@ -515,6 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(15)\n",
     "# Assign proper types to certain column elements.\n",
     "\n",
     "car_df = car_df\\\n",
@@ -534,24 +457,10 @@
    },
    "outputs": [],
    "source": [
+    "#(16)\n",
     "# Check the schema to see the changes\n",
     "\n",
     "car_df.printSchema()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "200a4bfa-2b92-4fb0-acba-6d7f723f8be5",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "<span style=\"color:blue\">\n",
-    "    TODO : \n",
-    "    <ul>\n",
-    "      <li>Highlight type changes in table schema.</li>\n",
-    "    </ul>\n",
-    "</span>"
    ]
   },
   {
@@ -561,6 +470,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(17)\n",
     "# Check to make sure that we have data in every column of every row.\n",
     "# The query below counts all instances of null or nan in each colum of the car_df dataframe.\n",
     "\n",
@@ -576,6 +486,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(18)\n",
     "# Write and call a User Defined Function (UDF) written in Python \n",
     "\n",
     "\n",
@@ -605,27 +516,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a0ba0c39-aa7e-4c8e-b033-7892b7262422",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "<span style=\"color:blue\">\n",
-    "    TODO : \n",
-    "    <ul>\n",
-    "      <li>Mention get_age() function could be part of larger shared/reusable library with unit testing and \"all the trimmings\".</li>  \n",
-    "    </ul>\n",
-    "</span>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2c3b4f62-4d12-43ff-8a2d-f14d4164554e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(19)\n",
     "# Call a UDF written in Java\n",
     "\n",
     "# Add the first name length field (fname_length) by calling a Java function. \n",
@@ -643,6 +540,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# (20)\n",
     "# We could also call the Java UDF using a SQL query. \n",
     "# Let's do that but just show what the transformation would look like.\n",
     "\n",
@@ -671,33 +569,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a19a060a-401a-4aca-9b00-ed6531fd44ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# One last simple tranformation example :\n",
-    "\n",
-    "# Add calculated column. Create 'inflated_price' column, which is the ('Selling_Price' + 30 percent) :\n",
-    "\n",
-    "car_df = car_df\\\n",
-    "    .withColumn('inflated_price', F.col('Selling_Price')*F.lit(1.30))\n",
-    "\n",
-    "car_df\\\n",
-    "    .select('Car_Name', 'Selling_Price', 'Inflated_Price')\\\n",
-    "    .show(5, False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "fd4f124e-8ddd-4515-a038-d9ab635abdee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop a column we don't need .. in this case, the 'Inflated_Price' and 'car_name_length' columns we just added.\n",
+    "#(21)\n",
+    "# One last simple tranformation  :\n",
+    "# Drop a column we don't need .. in this case, we drop the 'car_name_length' column we just added.\n",
     "\n",
     "car_df = car_df\\\n",
-    "    .drop('Inflated_Price')\\\n",
     "    .drop('car_name_length')\n",
     "\n",
     "car_df.show(5, False)\n"
@@ -718,6 +598,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(22)\n",
     "# Compute summary statistics for numeric columns.\n",
     "\n",
     "car_df\\\n",
@@ -733,6 +614,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# (23)\n",
     "# Convert the Spark dataframe to a native Pandas dataframe (for visualizations). \n",
     "# Note that we are NOT using the NEW Pandas API on Spark, which allows \n",
     "# you to scale your Pandas workload out. It's just straight Pandas.\n",
@@ -747,6 +629,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(24)\n",
     "# A SIDE NOTE ... APACHE ARROW\n",
     "\n",
     "# If using Apacke Arrow, creating a Spark dataframe from a pandas dataframe is much quicker.\n",
@@ -759,25 +642,7 @@
     "print()\n",
     "# If using NOT using Apacke Arrow, creating a Spark dataframe from a pandas dataframe should be slower.\n",
     "spark.conf.set(\"spark.sql.execution.arrow.pyspark.enabled\", \"false\")\n",
-    "%time df = spark.createDataFrame(car_pdf)\n",
-    "\n",
-    "# Reset to use Apache Arrow\n",
-    "spark.conf.set(\"spark.sql.execution.arrow.pyspark.enabled\", \"true\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b25c64e7-3796-4f63-bac1-2abfe624c46f",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "<span style=\"color:blue\">\n",
-    "    TODO : \n",
-    "    <ul>\n",
-    "      <li>Highlight dataframe creation speed difference (with and without arrow)</li>\n",
-    "    </ul>\n",
-    "</span>"
+    "%time df = spark.createDataFrame(car_pdf)"
    ]
   },
   {
@@ -787,6 +652,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(25)\n",
     "# Create boxplots for numerical data.\n",
     "\n",
     "fig, ((ax1, ax2), (ax3, ax4)) = plt.subplots(2, 2, figsize=(12, 7))\n",
@@ -805,6 +671,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(26)\n",
     "# Create bar charts for categorical data.\n",
     "\n",
     "fig, ((ax1, ax2), (ax3, ax4)) = plt.subplots(2, 2, figsize=(12, 11))\n",
@@ -823,6 +690,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(27)\n",
     "# Create correlation heatmap.\n",
     "\n",
     "sns.heatmap(car_pdf.corr(), annot=True, cmap=\"RdBu\")\n",
@@ -836,6 +704,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(28)\n",
     "# Plot selling_price relative to present_price.\n",
     "\n",
     "plt.figure(figsize=(10,10))\n",
@@ -853,22 +722,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afde1492-451d-4e6d-b9b6-4f20652c2150",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Show the schema of the dataframe we are saving\n",
-    "\n",
-    "car_df.printSchema()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "6e7c36e4-ae87-4500-80b6-7b441574ac42",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(29)\n",
+    "# Save the dataframe for downstream use\n",
     "car_df.write.mode(\"overwrite\").parquet(\"/data/car_data.parquet\")"
    ]
   },
@@ -879,6 +738,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(30)\n",
     "%%bash\n",
     "\n",
     "echo 'Current Linux User : (Should be ds...)'\n",
@@ -902,6 +762,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(31)\n",
     "spark.stop()"
    ]
   },
