--- a/src/jupyter/2_car_data_predictions_MLlib.ipynb
+++ b/src/jupyter/2_car_data_predictions_MLlib.ipynb
@@ -7,15 +7,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(1)\n",
     "from pyspark.sql import SparkSession\n",
     "import pyspark.sql.functions as F\n",
     "import pyspark.sql.types as T\n",
+    "\n",
     "from pyspark.ml.feature import OneHotEncoder\n",
     "from pyspark.ml.feature import StringIndexer\n",
     "from pyspark.ml.linalg import Vectors, SparseVector\n",
     "from pyspark.ml.feature import VectorAssembler\n",
     "from pyspark.ml.linalg import VectorUDT\n",
-    "\n",
     "from pyspark.ml import Pipeline\n",
     "from pyspark.ml.regression import RandomForestRegressor\n",
     "from pyspark.ml.evaluation import RegressionEvaluator\n",
@@ -37,6 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(2)\n",
     "# Start spark session. \n",
     "\n",
     "spark = SparkSession\\\n",
@@ -47,25 +49,6 @@
     "            .config(\"spark.driver.memory\", \"3G\")\\\n",
     "            .config(\"spark.sql.execution.arrow.pyspark.enabled\", \"true\")\\\n",
     "            .getOrCreate()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5025afb-2a82-4882-adee-8b111d4c9d31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Print the Spark session configuration. \n",
-    "\n",
-    "print(\"Spark Session configuration : \")\n",
-    "\n",
-    "print('===')\n",
-    "\n",
-    "for e in spark.sparkContext.getConf().getAll():\n",
-    "    print(e)\n",
-    "\n",
-    "print('===')\n"
    ]
   },
   {
@@ -83,51 +66,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(3)\n",
     "# Read in Parquet file.\n",
     "\n",
-    "car_df = spark.read.parquet(\"/data/car_data.parquet\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8623d387-10c3-4bc4-b5da-b557b8ec3149",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Parquet files maintain the schema along with the data.\n",
-    "# Print the dataframe schema. \n",
+    "car_df = spark.read.parquet(\"/data/car_data.parquet\")\n",
     "\n",
     "car_df.printSchema()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3334550-1c32-4b26-810f-54648b259ac6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Show a few sample records. \n",
-    "\n",
-    "car_df.show(5, False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "425544e0-7e82-43a2-9f37-5d852eaf83e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# What's the partitioning situation in the Parquet file ?\n",
-    "\n",
-    "car_df\\\n",
-    "    .withColumn(\"partitionId\", F.spark_partition_id())\\\n",
-    "    .groupBy(\"partitionId\")\\\n",
-    "    .count()\\\n",
-    "    .orderBy(F.asc(\"count\"))\\\n",
-    "    .show()"
    ]
   },
   {
@@ -145,6 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(4)\n",
     "# Map a string column of labels to an ML column of label indices \n",
     "\n",
     "# (Colums : 'Fuel_Type', 'Seller_Type', 'Transmission').\n",
@@ -166,6 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(5)\n",
     "# We created 3 new columns. Show aggregate counts.\n",
     "\n",
     "car_df.select('Fuel_Type','fuel_Type_idx')\\\n",
@@ -194,6 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(6)\n",
     "# The car_df dataframe will show the 3 extra columns : 'fuel_Type_idx', 'seller_type_idx', 'transmission_idx'\n",
     "\n",
     "car_df.printSchema()\n"
@@ -206,15 +153,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# One-hot encoding. For string type input data, it is common to \n",
-    "# encode categorical features using StringIndexer first.\n",
+    "#(7)\n",
+    "# One-hot encoding. \n",
     "\n",
     "# Drop the columns I'm just about to create if they exist.\n",
     "car_df = car_df.drop('fuel_Type_vec', 'seller_type_vec', 'transmission_vec')\n",
     "\n",
     "encoder = OneHotEncoder(inputCols=['fuel_Type_idx', 'seller_type_idx', 'transmission_idx'],\n",
     "                        outputCols=['fuel_Type_vec', 'seller_type_vec', 'transmission_vec'],\n",
-    "                        dropLast=True\n",
+    "                        dropLast=False\n",
     ")\n",
     "model = encoder.fit(car_df)\n",
     "car_df = model.transform(car_df)\n"
@@ -239,35 +186,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Something to be aware of ...\n",
-    "\n",
-    "# PySpark automatically drops the last category is not included BY DEFAULT. This is to avoid a Dummy Variable Trap\n",
-    "# linear regression models....\n",
-    "\n",
-    "# What is the Dummy Variable Trap (DVT)? The DVT occurs when two or more dummy variables \n",
-    "# created by one-hot encoding are highly correlated (multi-collinear). This means that one variable can be \n",
-    "# predicted from the others, making it difficult to interpret predicted coefficient variables in regression models.\n",
-    "\n",
-    "\n",
-    "# https://stackoverflow.com/questions/39500213/why-does-sparks-onehotencoder-drop-the-last-category-by-default\n",
-    "\n",
-    "# But basically, ... dropping the last cat. value is done to avoid a DVT where one input variable can be predicted \n",
-    "# from the others (eg. don't need a 1hot encoding of [isBoy, isGirl] when an encoding [isBoy] would give the same info). \n",
-    "# The solution to the DVT is to drop one (not necessarily the last) of the cat. variables.\n",
-    "\n",
-    "\n",
-    "# There are 3 fuel types but the 'fuel_type_vec' column has only 2 elements because of this DVT last category drop thing.\n",
+    "#(8)\n",
     "\n",
     "# https://spark.apache.org/docs/latest/ml-features.html#vectorassembler\n",
     "\n",
     "# Reminder... sparse vector (size, [non-zero indices], [non-zero values]) \n",
-    "# [1.0,0.0] = (2,[0],[1.0]) - > (vector of size 2, [index 0], [gets value 1.0])\n",
+    "# [1.0, 0.0, 0.0] = (3,[0],[1.0]) - > (vector of size 3, [index 0], [gets value 1.0])\n",
     "\n",
     "car_df\\\n",
     "    .select('Fuel_type', 'fuel_type_idx', 'fuel_type_vec')\\\n",
     "    .distinct()\\\n",
-    "    .show(10)\n",
-    "                                                                                                                                  "
+    "    .show()\n",
+    "\n",
+    "car_df\\\n",
+    "    .select('Seller_type', 'seller_type_idx', 'seller_type_vec')\\\n",
+    "    .distinct()\\\n",
+    "    .show()\n",
+    "\n",
+    "car_df\\\n",
+    "    .select('Transmission', 'transmission_idx', 'transmission_vec')\\\n",
+    "    .distinct()\\\n",
+    "    .show()\n"
    ]
   },
   {
@@ -277,6 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(9)\n",
     "# Print the car_df schema. \n",
     "\n",
     "# The car_df dataframe will show the 3 extra columns : 'fuel_Type_vec', 'seller_type_vec', 'transmission_vec'\n",
@@ -291,6 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(10)\n",
     "# Drop the column if exists\n",
     "car_df = car_df.drop('algorithmic_input')\n",
     "\n",
@@ -319,6 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(11)\n",
     "# Print the car_df schema. \n",
     "\n",
     "# The car_df dataframe will show the 1 extra columns : 'algorithmic_input'\n",
@@ -333,6 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(12)\n",
     "# Show the some of the table columns\n",
     "\n",
     "car_df.select('algorithmic_input', 'Selling_Price').show(10, False)\n"
@@ -353,6 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(13)\n",
     "# Create train/test split. Seed it for reproducibility.\n",
     "seed = 111\n",
     "train_df, test_df = car_df.randomSplit([0.7, 0.3], seed=seed)\n",
@@ -368,6 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(14)\n",
     "# Train a simlpe RandomForestRegressor model. This very simple model is meant \n",
     "# to show model feature inputs and outputs. The model is kept simple on purpose \n",
     "# to keep training time short.\n",
@@ -403,6 +348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(15)\n",
     "# Chain rf model in a Pipeline. Could have included previous steps above (indexer, encoder, assembler) ...\n",
     "pipeline = Pipeline(stages=[rf])\n",
     "\n",
@@ -417,6 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(16)\n",
     "# Make predictions.\n",
     "\n",
     "predictions = model.transform(test_df)\n",
@@ -440,6 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(17)\n",
     "# Evaluate Model.\n",
     "\n",
     "# Select (prediction, true label) and compute test error\n",
@@ -475,6 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(18)\n",
     "\n",
     "# Overwriting to avoid errors in running notebook multiple times..\n",
     "model.write().overwrite().save('/data/rf.mdl')\n"
@@ -495,6 +444,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(19)\n",
     "persisted_model = PipelineModel.load('/data/rf.mdl')"
    ]
   },
@@ -505,6 +455,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(20)\n",
     "to_predict_schema = T.StructType([\n",
     "    T.StructField('Type_of_Car', T.StringType(), False),\n",
     "    T.StructField('values_array', T.ArrayType(T.FloatType()), False)\n",
@@ -546,6 +497,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#(21)\n",
     "spark.stop()"
    ]
   },
