--- a/src/jupyter/1_car_data_ETL.ipynb
+++ b/src/jupyter/1_car_data_ETL.ipynb
@@ -260,6 +260,10 @@
     "# Repartition data a bit. Shuffle data to where we have as many partitions as the number of available core\n",
     "# (e.g. 6 in this case because our cluster is configured with 6 cores).\n",
     "\n",
+    "# Partition tuning .. it's a bit of an art?\n",
+    "# The general recommendation for Spark is to have 4x of partitions to the number of cores in cluster available for application.\n",
+    "# ...\n",
+    "\n",
     "car_df = car_df.repartition(6) \n",
     "\n",
     "\n",
