--- a/src/jupyter/1_car_data_ETL.ipynb
+++ b/src/jupyter/1_car_data_ETL.ipynb
@@ -62,10 +62,7 @@
     "\n",
     "# Start up Spark session. \n",
     "\n",
-    "# Request : \n",
-    "#   - A maximum of 6 cores with \n",
-    "#   - 2 cores per executor\n",
-    "#   - 3 GB of memory per executor\n",
+    "# Request maximum resources explicitly.\n",
     "\n",
     "spark = SparkSession\\\n",
     "            .builder\\\n",
